# xen-checkelf

./: .pylintrc  LICENSE  README.md  pyproject.toml
checkelf/: __init__.py  checkelf.py
